--- a/1.Introduction.tex
+++ b/1.Introduction.tex
@@ -174,6 +174,7 @@ We demonstrate three viable methods of creating Java threads from within a Java 
     };
     t.start();
     \end{minted}
+    The @Override decorator is not required and we will leave it away from now on for the sake of having less cluttered code snippets.
 \end{enumerate}
 
 \subsubsection{Daemon vs Non-Daemon Threads}
